Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
Description
Problem with russian fonts in bold in Firefox and Wine Browser
trunk and 0.4.0 are affected
All letters are shifted in 5 or 6 positions as in russian alfabet
This bug clearly is example of Caesar cipher
https://en.wikipedia.org/wiki/Caesar_cipher
Attachments
Issue Links
- is blocked by
-
CORE-13365 Font/freetype: Improve GetFontResourceInfoW (EnumFonts test program)
-
- Resolved
-
- is duplicated by
-
CORE-10446 incorrect display of text in the browser
-
- Resolved
-
- relates to
-
CORE-11386 Firefox incorect text or caption
-
- Resolved
-
-
CORE-12146 GDI32 TextOut[A|W] Bug: '\0' writes as square instead of nothing
-
- Resolved
-
-
CORE-12179 fontview: incorrect font name for Tahoma Bold
-
- Resolved
-
-
CORE-13089 1C Repetitor 1.x: randomly breaks Freetype
-
- Resolved
-
-
CORE-12091 [Tahoma font/kerning] has issues when displaying letter combination "fi" & "fli" (Regression in RICHED20)
-
- Resolved
-